style.css
@import url("https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

body {
	font-family: "Montserrat", serif;
}

h1,
h2,
h3 {
	font-family: "Fira Sans", serif;
}

h4,
h5 {
	font-family: "Cardo", serif;
}

header {
	position: sticky;
	background-color: #ededed;
	z-index: 99;
}

header > a > img {
	height: 7em;
}

nav {
	font-family: "Fira Sans", serif;
	font-size: 1.25em;
	height: 2em;
	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
	align-items: center;
}

nav > div > a {
	color: #474747;
	text-decoration: none;
	align-items: center;
}

main {
	position: relative;
	text-align: center;
}

main > div {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

main > button {
	position: absolute;
	top: 60%;
	left: 50%;
	transform: translate(-50%, -50%);
}

main > img {
	width: 100%;
}

.lines {
	height: 100px;
	background-image: linear-gradient(
		to bottom,
		#f2af26,
		#f2af26 33%,
		#ad343e 33%,
		#ad343e 66%,
		#3f88c5 66%,
		#3f88c5 100%
	);
	background-size: 100% 100px;
}

.header-wrapper {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding-right: 1%;
}
.shadow {
	box-shadow: 0 2px 10px black;
}

.menu-icon {
	height: 2em;
	filter: drop-shadow(0px 0px 5px rgb(0 0 0 / 0.4));
}

